--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/8.delete-a-user-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/8.delete-a-user-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-当前用户必须拥有全局的 `CREATE USER` 权限，才可以成功执行 `DROP USER`命令。您可以先查看当前用户是否拥有该权限，查看当前用户拥有的权限请参见 [查看用户权限](../3.mysql-mode/4.view-the-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您添加相应的权限，为用户添加权限的相关操作请参见 [修改用户权限](../3.mysql-mode/5.modify-user-permissions-for-mysql-tenant-of-mysql-mode.md)。
+当前用户必须拥有全局的 `CREATE USER` 权限，才可以成功执行 `DROP USER`命令。您可以先查看当前用户是否拥有该权限，查看当前用户拥有的权限请参见 [查看用户权限](4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您添加相应的权限，为用户添加权限的相关操作请参见 [修改用户权限](5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 使用限制
 
