--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/0.permission-classification-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/0.permission-classification-of-oracle-mode.md
@@ -109,6 +109,6 @@ Oracle 模式的权限分为两类：
 更多 OceanBase 数据库权限管理的相关操作，参见：
 
 * [权限转授](3.delegation-of-authority-of-oracle-mode.md)
-* [角色](4.roles-of-oracle-mode.md)
+* [角色](4.manage-roles-of-oracle-mode/1.roles-of-oracle-mode.md)
 * [间接权限](5.indirect-authority-of-oracle-mode.md)
 * [权限检查](6.view-user-permissions-of-oracle-mode.md)
