--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/1.preparation-before-recovery.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/1.preparation-before-recovery.md
@@ -20,7 +20,7 @@
    obclient [(none)]> CREATE RESOURCE UNIT box_16c96g MAX_CPU 16, MEMORY_SIZE = '2G', MAX_IOPS 10240, MIN_IOPS=10240;
    ```
 
-   创建资源单元的详细操作及说明请参见 [创建资源单元](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/2.create-a-resource-unit.md)。
+   创建资源单元的详细操作及说明请参见 [创建租户](../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。
 
 3. 创建 Resource Pool（资源池）。
 
@@ -30,7 +30,7 @@
    obclient [(none)]> CREATE RESOURCE POOL restore_pool unit = 'box_16c96g', unit_num = 1, zone_list = ('z1','z2','z3');
    ```
 
-   创源资源池的详细操作及说明请参见 [创建资源池](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/4.create-a-resource-pool.md)。
+   创源资源池的详细操作及说明请参见 [创建租户](../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。
 
 ## 后续操作
 
