--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/9.delete-a-user-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/9.delete-a-user-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-当前用户必须拥有 `DROP USER` 的系统权限，才可以使用 `DROP USER` 命令，查看权限的相关操作请参见 [查看用户权限](../2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md)。如果您没有 `DROP USER` 系统权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md)。
+当前用户必须拥有 `DROP USER` 的系统权限，才可以使用 `DROP USER` 命令，查看权限的相关操作请参见 [查看用户权限](6.view-user-permissions-of-oracle-mode.md)。如果您没有 `DROP USER` 系统权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](7.modify-user-permissions-of-oracle-mode.md)。
 
 ## 注意事项
 
