--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/9.manage-dblink-of-mysql-mode/5.delete-a-dblink-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/9.manage-dblink-of-mysql-mode/5.delete-a-dblink-of-mysql-mode.md
@@ -12,7 +12,7 @@ DROP DATABASE LINK [IF EXISTS] dblink_name;
 
 语句使用说明：
 
-* 执行该语句的用户需要具备 `DROP DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../../2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-for-mysql-tenant-of-mysql-mode.md)。
+* 执行该语句的用户需要具备 `DROP DATABASE LINK` 权限。为用户授权的相关操作请参见 [修改用户权限](../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 * `IF EXISTS`：如果指定 `IF EXISTS`，即使待删除的 DBLink 不存在，也不会报错；如果不指定且待删除的 DBLink 不存在，则系统会报错。  
 
