--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/12.delete-tenant.md
@@ -67,7 +67,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
     obclient> DROP TENANT mq_t1;
     ```
 
-    `DROP TENANT` 语句的详细说明，参见 [DROP TENANT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
+    `DROP TENANT` 语句的详细说明，参见 [DROP TENANT](../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
 
 6. 查看 `DBA_OB_TENANTS` 视图，确认租户已经删除成功。
 
@@ -88,7 +88,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
     1 row in set
     ```
 
-    回收站相关参数的详细说明，参见 [recyclebin](../../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/113.recyclebin-global.md)。
+    回收站相关参数的详细说明，参见 [recyclebin](../../../7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/113.recyclebin-global.md)。
 
 ## 相关文档
 
