--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md
@@ -39,7 +39,7 @@
     1 row in set
     ```
 
-    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
+    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 4. 通过 `ALTER RESOURCE POOL` 语句，修改资源池配置。
 
@@ -70,9 +70,9 @@
 
     * `ZONE_LIST`：资源池的 Zone 分布。
 
-    `ALTER RESOURCE POOL` 语句的详细说明，参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
+    `ALTER RESOURCE POOL` 语句的详细说明，参见 [ALTER RESOURCE POOL](../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
 
-    `ALTER RESOURCE TENANT` 语句的详细说明，参见 [ALTER RESOURCE TENANT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md)。
+    `ALTER RESOURCE TENANT` 语句的详细说明，参见 [ALTER RESOURCE TENANT](../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md)。
 
     示例：
 
