--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/2.configure-the-log-transport-service/1.set-log-restore-source.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/2.configure-the-log-transport-service/1.set-log-restore-source.md
@@ -54,15 +54,15 @@
 
 * `GV$OB_LOG_STAT`：用于获取主租户的机器列表、副本服务的日志流 LSN 范围、角色（是否是 Leader）等信息。
   
-  关于 `GV$OB_LOG_STAT` 视图的更多介绍，请参见 [GV$OB_LOG_STAT](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/120.gv-ob_log_stat-mysql.md)。
+  关于 `GV$OB_LOG_STAT` 视图的更多介绍，请参见 [GV$OB_LOG_STAT](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/120.gv-ob_log_stat-mysql.md)。
 
 * `GV$OB_UNITS`：查询主租户的所有 Unit 信息，获取副本状态、Zone 以及 Region 等信息，用于过滤、获取和维护租户机器连接等。
 
-  关于 `GV$OB_UNITS` 视图的更多介绍，请参见 [GV$OB_UNITS](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
+  关于 `GV$OB_UNITS` 视图的更多介绍，请参见 [GV$OB_UNITS](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
 
 * `GV$OB_PARAMETERS`: 用于查询主租户的 `cluster_id`、`tenant_id` 等服务必须的元信息。
 
-  关于 `GV$OB_PARAMETERS` 视图的更多介绍，请参见 [GV$OB_PARAMETERS](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md)。
+  关于 `GV$OB_PARAMETERS` 视图的更多介绍，请参见 [GV$OB_PARAMETERS](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md)。
 
 * `DBA_OB_ACCESS_POINT`: 用于获取访问入口信息。在主租户迁移复制、容灾等场景下，若访问入口发生变化，备租户可以自动感知，不需要用户手动修改。
 
@@ -74,7 +74,7 @@
   
 * `DBA_OB_LS`: 获取主租户的日志流列表以及日志流状态。
 
-  关于 `DBA_OB_LS` 视图的更多介绍，请参见 [DBA_OB_LS](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/176.oceanbase-dba_ob_ls-of-mysql-mode.md)。
+  关于 `DBA_OB_LS` 视图的更多介绍，请参见 [DBA_OB_LS](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/176.oceanbase-dba_ob_ls-of-mysql-mode.md)。
 
 创建访问专用用户并授权的具体操作如下。
 
