--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/8.set-log-synchronization-compression.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/8.set-log-synchronization-compression.md
@@ -8,7 +8,7 @@
 
 2. 执行以下命令，开启日志同步压缩。
 
-   租户级配置项 `log_transport_compress_all` 用于设置日志传输是否开启压缩，默认值为 `False`，表示日志传输不开启压缩。有关配置项 `log_transport_compress_all` 的更多信息，请参见 [log_transport_compress_all](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/58.log_transport_compress_all.md)。
+   租户级配置项 `log_transport_compress_all` 用于设置日志传输是否开启压缩，默认值为 `False`，表示日志传输不开启压缩。有关配置项 `log_transport_compress_all` 的更多信息，请参见 [log_transport_compress_all](../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/4.tenant-level-configuration-items/58.log_transport_compress_all.md)。
 
    SQL 语句如下：
 
@@ -38,7 +38,7 @@
 
 3. （可选）如果需要修改压缩算法，可修改配置项 `log_transport_compress_func` 的值。
 
-   租户级配置项 `log_transport_compress_func` 用于设置日志传输所使用的压缩算法，当前支持的压缩算法有 lz4_1.0、zstd_1.0 和 zstd_1.3.8，默认为 lz4_1.0。有关配置项 `log_transport_compress_func` 的更多信息，请参见 [log_transport_compress_func](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/59.log_transport_compress_func.md)。
+   租户级配置项 `log_transport_compress_func` 用于设置日志传输所使用的压缩算法，当前支持的压缩算法有 lz4_1.0、zstd_1.0 和 zstd_1.3.8，默认为 lz4_1.0。有关配置项 `log_transport_compress_func` 的更多信息，请参见 [log_transport_compress_func](../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/4.tenant-level-configuration-items/59.log_transport_compress_func.md)。
 
    SQL 语句如下：
 
