--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/15.delete-resource-specification.md
@@ -43,9 +43,9 @@
     8 rows in set
     ```
 
-    `DBA_OB_UNIT_CONFIGS` 视图的详细说明，参见 [oceanbase.DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
+    `DBA_OB_UNIT_CONFIGS` 视图的详细说明，参见 [DBA_OB_UNIT_CONFIGS](../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
-    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
+    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [DBA_OB_RESOURCE_POOLS](../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 4. 通过 `DROP RESOURCE UNIT` 语句，删除资源规格。
 
@@ -56,7 +56,7 @@
     Query OK, 0 rows affected
     ```
 
-    `DROP RESOURCE UNIT` 语句的详细说明，参见 [DROP RESOURCE UNIT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/10.drop-resource-unit.md)。
+    `DROP RESOURCE UNIT` 语句的详细说明，参见 [DROP RESOURCE UNIT](../../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/10.drop-resource-unit.md)。
 
 5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格删除成功。
 
@@ -67,4 +67,4 @@
 
 ## 相关文档
 
-* [修改资源池属性](9.modify-resource-pool-properties.md)
+* [修改资源池属性](../9.modify-resource-pool-properties.md)
