--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -46,11 +46,11 @@
 
 * 由于空闲的资源池会被计算为占用的资源，故在扩容前，如果有租户被删除，建议与租户对应的资源池也一并删除，以便释放资源。
 
-  删除资源池的相关操作，参见 [删除资源池](../14.delete-resource-pool.md)。
+  删除资源池的相关操作，参见 [删除资源池](../15.resource-pool-management/14.delete-resource-pool.md)。
 
 * 进行租户缩容前，建议进行一轮转储以便释放租户正在使用的内存。
 
-  手动触发转储的相关操作，参见 [手动触发转储](../../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
+  手动触发转储的相关操作，参见 [手动触发转储](../../../../7.reference/2.system-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
 
 * 查看集群中资源的分配情况，了解集群中资源的使用情况。
 
