--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/6.optimize-log-synchronization-performance.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.log-transport-service/6.optimize-log-synchronization-performance.md
@@ -54,7 +54,7 @@
      ALTER SYSTEM SET log_restore_concurrency = 5 TENANT = standby_tenant;
      ```
 
-   有关配置项 `log_restore_concurrency` 的更多信息，请参见 [log_restore_concurrency](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/249.log_restore_concurrency.md)。
+   有关配置项 `log_restore_concurrency` 的更多信息，请参见 [log_restore_concurrency](../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/4.tenant-level-configuration-items/249.log_restore_concurrency.md)。
 
 ## 调整主租户的日志归档速度
 
