--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/3.modify-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/3.modify-a-database-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-请确认当前用户拥有 `ALTER` 权限。查看当前拥有的权限的操作请参见 [查看用户权限](../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `ALTER` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+请确认当前用户拥有 `ALTER` 权限。查看当前拥有的权限的操作请参见 [查看用户权限](../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `ALTER` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 操作步骤
 
