--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/4.statistics-monitoring-diagnosis.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/4.statistics-monitoring-diagnosis.md
@@ -54,16 +54,17 @@ obclient [oceanbase]> DESC GV$OB_OPT_STAT_GATHER_MONITOR;
 * `RUNNING_TABLE_NAME` 表示收集任务正在收集表的名称。
 * `RUNNING_TABLE_DURATION_TIME` 表示收集任务正在收集表的持续时间（单位：us）。
 
-如下示例为对 `test` 用户的表 `t1` 使用默认策略执行手动收集直方图统计信息。
+如下示例为对用表 `test.t1` 使用默认策略执行手动收集直方图统计信息。
 
 ```shell
 CREATE TABLE test.t1(c1 INT, c2 INT, c3 INT, c4 INT, c5 INT, c6 INT, c7 INT, c8 INT, c9 INT, c10 INT);
 CREATE TABLE t2 (c1 INT PRIMARY KEY);
 INSERT INTO t2 VALUES(0),(1),(2),(3),(4),(5),(6),(7),(8),(9);
 INSERT /*+APPEND*/ INTO t1 SELECT * FROM (SELECT s0.c1 c1, s1.c1 c2, s2.c1 c3, s3.c1 c4, s4.c1 c5, s5.c1 c6, s0.c1 * 10 c7, s1.c1 * 10 c8, s2.c1 * 10 c9, s3.c1 * 10 c10 FROM t2 s0, t2 s1, t2 s2, t2 s3, t2 s4, t2 s5);
+CALL DBMS_STATS.GATHER_TABLE_STATS('test', 't1');
 ```
 
-在收集过程中查询到的统计信息收集状态如下：
+在收集过程中查询到指定 MySQL 租户的统计信息收集状态如下：
 
 ```shell
 obclient> SELECT * FROM oceanbase.GV$OB_OPT_STAT_GATHER_MONITOR WHERE tenant_id = 1006;
@@ -119,7 +120,7 @@ obclient [oceanbase]> DESC DBA_OB_TASK_OPT_STAT_GATHER_HISTORY;
 ```shell
 obclient [test]> USE oceanbase;
 Database changed
-obclient [oceanbase]>SELECT * FROM DBA_OB_TASK_OPT_STAT_GATHER_HISTORY WHERE TENANT_ID = 1006;
+obclient [oceanbase]> SELECT * FROM DBA_OB_TASK_OPT_STAT_GATHER_HISTORY WHERE TENANT_ID = 1006;
 +-----------+--------------------------------------+---------------+---------+-------------+--------------+----------------------------+----------------------------+
 | TENANT_ID | TASK_ID                              | TYPE          | STATUS  | TABLE_COUNT | FAILED_COUNT | START_TIME                 | END_TIME                   |
 +-----------+--------------------------------------+---------------+---------+-------------+--------------+----------------------------+----------------------------+
