--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/15.delete-resource-specification.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-删除资源规格前必须确保当前资源规格未被使用。如果资源规格正在被使用，则需要先将资源规格从资源池中移出后再删除资源规格。详细操作，参见 [修改资源池属性](9.modify-resource-pool-properties.md)。
+删除资源规格前必须确保当前资源规格未被使用。如果资源规格正在被使用，则需要先将资源规格从资源池中移出后再删除资源规格。详细操作，参见 [修改资源池属性](../9.modify-resource-pool-properties.md)。
 
 ## 操作步骤
 
