--- a/zh-CN/7.reference/2.system-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
+++ b/zh-CN/7.reference/2.system-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
@@ -53,11 +53,11 @@
 
    * `ESTIMATED_FINISH_TIME`：表示预计完成时间。
    
-   有关 `GV$OB_TABLET_COMPACTION_PROGRESS` 视图中字段的详细介绍，请参见 [GV$OB_TABLET_COMPACTION_PROGRESS](../../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/11.gv-ob_tablet_compaction_progress-of-mysql-mode.md)。
+   有关 `GV$OB_TABLET_COMPACTION_PROGRESS` 视图中字段的详细介绍，请参见 [GV$OB_TABLET_COMPACTION_PROGRESS](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/11.gv-ob_tablet_compaction_progress-of-mysql-mode.md)。
    
    根据查询结果，对于未出现在该视图中的 Tablet 或长时间未完成的 Tablet，可以进一步查看诊断视图 `GV$OB_COMPACTION_DIAGNOSE_INFO`，确认是否有异常情况出现。
 
-   有关 `GV$OB_COMPACTION_DIAGNOSE_INFO` 视图中字段的详细介绍，请参见 [GV$OB_COMPACTION_DIAGNOSE_INFO](../../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/2.gv-ob_compaction_diagnose_info-of-mysql-mode.md)。
+   有关 `GV$OB_COMPACTION_DIAGNOSE_INFO` 视图中字段的详细介绍，请参见 [GV$OB_COMPACTION_DIAGNOSE_INFO](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/2.gv-ob_compaction_diagnose_info-of-mysql-mode.md)。
 
 
 ## 查看转储历史
@@ -209,4 +209,4 @@
    5 rows in set
    ```
 
-   有关 `GV$OB_TABLET_COMPACTION_HISTORY` 视图中字段的详细介绍，请参见 [GV$OB_TABLET_COMPACTION_HISTORY](../../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/10.gv-ob_tablet_compaction_history-of-mysql-mode.md)。
+   有关 `GV$OB_TABLET_COMPACTION_HISTORY` 视图中字段的详细介绍，请参见 [GV$OB_TABLET_COMPACTION_HISTORY](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/10.gv-ob_tablet_compaction_history-of-mysql-mode.md)。
