--- a/zh-CN/7.reference/2.system-management/5.manage-data-storage/2.merge-management/3.scheduled-trigger-merge.md
+++ b/zh-CN/7.reference/2.system-management/5.manage-data-storage/2.merge-management/3.scheduled-trigger-merge.md
@@ -22,7 +22,7 @@
    obclient> ALTER SYSTEM SET enable_major_freeze='True';
    ```
 
-   关于配置项 `enable_major_freeze` 的更多信息，请参见 [enable_major_freeze](../../../../5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/72.enable_major_freeze.md)。
+   关于配置项 `enable_major_freeze` 的更多信息，请参见 [enable_major_freeze](../../../8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/72.enable_major_freeze.md)。
 
 ## 定时合并的触发条件
 
