--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-a-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-a-table-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 数据库是一个多用户使用的共享资源。当多个用户并发地存取数据时，在数据库中就会产生多个事务同时存取同一数据的情况。若对并发操作不加控制就可能会读取和存储不正确的数据，破坏数据库的一致性。加锁是实现数据库并发控制的一个非常重要的技术。为了确保资源的安全性（也就是数据完整性和一致性）才引申出锁机制。利用其锁机制来实现事务间的数据并发访问及数据一致性。
 
-锁表后，锁定的表将保持锁定状态，直到您提交事务或将事务回滚（回滚到表锁定前的保存点）后，表锁才会被释放。有关事务控制语句的详细说明，请参见 [事务控制语句](../../../../../3.develop/6.transaction-in-develop/2.transaction-in-develop-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
+锁表后，锁定的表将保持锁定状态，直到您提交事务或将事务回滚（回滚到表锁定前的保存点）后，表锁才会被释放。有关事务控制语句的详细说明，请参见 [事务控制语句](../../../../3.develop/6.transaction-in-develop/2.transaction-in-develop-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
 
 ## 表锁模式
 
@@ -144,10 +144,10 @@ IN lockmode MODE
 
   <main id="notice" type='notice'>
   <h4>注意</h4>
-  <p>当指定 <code>WAIT integer</code> 时，语句执行的超时时间取决于 <code>integer</code> 、<a href="../../../../5.system-reference/2.system-variable/3.global-system-variable/90.ob_query_timeout-global.md">ob_query_timeout</a> 及 <a href="../../../../5.system-reference/2.system-variable/3.global-system-variable/103.ob_trx_timeout-global.md">ob_trx_timeout</a> 的值，并以三者中的最小值作为语句执行的实际超时时间。例如，指定 <code>WAIT 10</code>，且 <code>ob_query_timeout</code>、<code>ob_trx_timeout</code>均为默认值，则等待锁冲突的超时时间为 1000000 us 即 1s。</p>
+  <p>当指定 <code>WAIT integer</code> 时，语句执行的超时时间取决于 <code>integer</code> 、<a href="../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/90.ob_query_timeout-global.md">ob_query_timeout</a> 及 <a href="../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/103.ob_trx_timeout-global.md">ob_trx_timeout</a> 的值，并以三者中的最小值作为语句执行的实际超时时间。例如，指定 <code>WAIT 10</code>，且 <code>ob_query_timeout</code>、<code>ob_trx_timeout</code>均为默认值，则等待锁冲突的超时时间为 1000000 us 即 1s。</p>
   </main>
   
-  如果既不指定 `NOWAIT` 也不指定 `WAIT integer`，则语句执行的超时时间将取决于 [ob_query_timeout](../../../../5.system-reference/2.system-variable/3.global-system-variable/90.ob_query_timeout-global.md) 和 [ob_trx_timeout](../../../../5.system-reference/2.system-variable/3.global-system-variable/103.ob_trx_timeout-global.md) 之间的最小值。
+  如果既不指定 `NOWAIT` 也不指定 `WAIT integer`，则语句执行的超时时间将取决于 [ob_query_timeout](../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/90.ob_query_timeout-global.md) 和 [ob_trx_timeout](../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/103.ob_trx_timeout-global.md) 之间的最小值。
 
 下面以示例进行说明。假设当前数据库中有一个模板化二级分区表 `tbl2`，其建表语句如下。
 
@@ -168,7 +168,7 @@ PARTITION p2 VALUES LESS THAN (300)
 );
 ```
 
-创建分区表后，根据模板化二级分区表的分区命名规则，创建的二级分区名分别为 `p0ssp0`，`p0ssp1` 和 `p0ssp2`。有关区命名规则详细说明，请参见 [分区概述](../../../4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md)。
+创建分区表后，根据模板化二级分区表的分区命名规则，创建的二级分区名分别为 `p0ssp0`，`p0ssp1` 和 `p0ssp2`。有关区命名规则详细说明，请参见 [分区概述](../2.manage-partitions-of-oracle-mode/1.partition-overview-of-oracle-mode.md)。
 
 接着对该表进行以下上锁操作：
 
@@ -236,4 +236,4 @@ SELECT * FROM GV$OB_LOCKS;
 | BLOCK          | 表示锁是否在阻止其他进程：<ul><li>0：表示未阻止任何进程</li><li>1：表示正在阻止其他进程</li></ul>        |
 ## 更多信息
 
-更多 `LOCK TABLES` 语句的介绍，请参见 [LOCK TABLES](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md)。
+更多 `LOCK TABLES` 语句的介绍，请参见 [LOCK TABLES](../../../5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md)。
