--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/3.manage-table-groups-of-oracle-mode/6.manage-tables-within-a-table-group-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/3.manage-table-groups-of-oracle-mode/6.manage-tables-within-a-table-group-of-oracle-mode.md
@@ -120,11 +120,11 @@
 
 根据当前表的实际情况结合修改规则，参考以下内容，进行表分区的修改。
 
-* [修改分区方式](../../../4.replica-management/2.manage-partition-table/1.oracle-mode/3.modify-partition-rules-of-oracle-mode.md)
+* [修改分区方式](../2.manage-partitions-of-oracle-mode/3.modify-partition-rules-of-oracle-mode.md)
 
-* [添加分区](../../../4.replica-management/2.manage-partition-table/1.oracle-mode/4.add-a-partition-of-oracle-mode.md)
+* [添加分区](../2.manage-partitions-of-oracle-mode/4.add-a-partition-of-oracle-mode.md)
 
-* [删除分区](../../../4.replica-management/2.manage-partition-table/1.oracle-mode/5.delete-a-partition-of-oracle-mode.md)
+* [删除分区](../2.manage-partitions-of-oracle-mode/5.delete-a-partition-of-oracle-mode.md)
 
 ## 将表移出表组
 
