--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/4.manage-indexes-of-oracle-mode/2.create-an-index-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/4.manage-indexes-of-oracle-mode/2.create-an-index-of-oracle-mode.md
@@ -6,7 +6,7 @@
 
 OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或非唯一索引，还可以是函数索引。
 
-本节主要介绍如何在非分区表上创建索引，分区表上索引的创建请参见 [创建分区表索引](../../../4.replica-management/2.manage-partition-table/1.oracle-mode/9.create-partition-table-index-of-oracle-mode/2.local-index-of-oracle-mode.md) 章节。
+本节主要介绍如何在非分区表上创建索引，分区表上索引的创建请参见 [创建分区表索引](../2.manage-partitions-of-oracle-mode/9.create-partition-table-index-of-oracle-mode/2.local-index-of-oracle-mode.md) 章节。
 
 ## 注意事项
 
