--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.resource-pool-management/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.resource-pool-management/14.delete-resource-pool.md
@@ -6,11 +6,11 @@
 
 删除资源池前，请确认该资源池当前未被任何租户使用。如果资源池正在被租户使用，则需要将资源池释放后再删除资源池。
 
-* 当租户有多个资源池，可以通过修改租户的资源池配置，从租户中移除资源池。相关操作参见 [修改租户属性](10.modify-tenant-properties.md)。
+* 当租户有多个资源池，可以通过修改租户的资源池配置，从租户中移除资源池。相关操作参见 [修改租户属性](../10.modify-tenant-properties.md)。
 
 * 当租户只有一个资源池时，不支持直接移除。
 
-  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，参见 [新建资源池](2.manage-create-tenant.md)。
+  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，参见 [新建资源池](../2.manage-create-tenant.md)。
   * 如果租户已不再使用，也可以先删除租户后，再删除资源池。详细操作，参见 [删除租户](../12.delete-tenant.md)。
 
 ## 操作步骤
