--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.about-merge.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.about-merge.md
@@ -77,4 +77,4 @@
 
 ## 相关文档
 
-更多合并操作，请参见 [合并](../../../2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/1.consolidation-management-overview.md)。
+更多合并操作，请参见 [合并](../../../2.system-management/5.manage-data-storage/2.merge-management/1.consolidation-management-overview.md)。
