--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/2.create-a-table-for-mysql-tenant-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/2.create-a-table-for-mysql-tenant-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 您可以使用 `CREATE TABLE` 语句来创建表。
 
-本节主要介绍非分区表的创建，分区表的创建及使用请参见 [创建分区表](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/2.create-a-partition-table-of-mysql-mode.md)。
+本节主要介绍非分区表的创建，分区表的创建及使用请参见 [创建分区表](../3.manage-partitions-of-mysql-mode/2.create-a-partition-table-of-mysql-mode.md)。
 
 ## 创建非分区表
 
@@ -57,7 +57,7 @@ Query OK, 0 rows affected
 
 示例中创建了 2 个表，并同时对表中的列定义了一些约束信息，包括在不同列上创建的主键和外键等。更多主键、外键等的介绍，请参见 [定义列的约束类型](4.define-the-constraint-type-for-a-column-of-mysql-mode.md) 。
 
-创建表的列时请选择正确的数据类型，有关 SQL 数据类型的详细描述，请参见 [数据类型](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
+创建表的列时请选择正确的数据类型，有关 SQL 数据类型的详细描述，请参见 [数据类型](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
@@ -110,9 +110,9 @@ SELECT * FROM oceanbase.DBA_OB_LS WHERE flag LIKE "%DUPLICATE%";
 1 rows in set
 ```
 
-示例中，`LS_ID` 为 `1003` 的日志流即为广播日志流，租户的所有复制表都创建在该日志流上。有关广播日志流的更多介绍，请参见 [副本介绍](../../../../../6.manage/3.replica-management/1.replica-introduction.md)。
+示例中，`LS_ID` 为 `1003` 的日志流即为广播日志流，租户的所有复制表都创建在该日志流上。有关广播日志流的更多介绍，请参见 [副本介绍](../../../../6.manage/3.replica-management/1.replica-introduction.md)。
 
-复制表创建成功后，可以与普通表一样进行插入和读写操作。不同的是，对于读请求，如果使用 Proxy 的方式连接数据库，则读请求可能会路由到任意一个 OBServer 节点执行；如果是通过直连方式连接数据库，则只要本地副本可读，系统就会在直连的 OBServer 节点上执行读请求。更多数据库连接方式的介绍，请参见 [连接方式概述](../../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+复制表创建成功后，可以与普通表一样进行插入和读写操作。不同的是，对于读请求，如果使用 Proxy 的方式连接数据库，则读请求可能会路由到任意一个 OBServer 节点执行；如果是通过直连方式连接数据库，则只要本地副本可读，系统就会在直连的 OBServer 节点上执行读请求。更多数据库连接方式的介绍，请参见 [连接方式概述](../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 ## 复制已有表的数据创建新表
 
