--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/5.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/5.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
@@ -4,9 +4,9 @@
 
 ## 背景信息
 
-OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或非唯一索引，还可以是空间索引或函数索引。如果是分区表的唯一索引，则局部的唯一索引必须包含表分区的分区键。关于索引的更多介绍，请参见 [索引简介](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md) 章节。
+OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或非唯一索引，还可以是空间索引或函数索引。如果是分区表的唯一索引，则局部的唯一索引必须包含表分区的分区键。关于索引的更多介绍，请参见 [索引简介](../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md) 章节。
 
-本节主要介绍如何在非分区表上创建索引，分区表上索引的创建请参见 [在分区表上建立索引](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md) 章节。
+本节主要介绍如何在非分区表上创建索引，分区表上索引的创建请参见 [在分区表上建立索引](../3.manage-partitions-of-mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md) 章节。
 
 ## 注意事项
 
@@ -130,9 +130,9 @@ OceanBase 数据库的 MySQL 模式支持创建空间索引。空间索引是对
 
 * 创建空间索引的列必须定义为 `SRID` 属性，否则，在该列上添加的空间索引在后续查询时会无法生效。这是因为，创建空间索引后，在使用空间索引进行比较时，需要使用列定义中的 `SRID` 所对应的坐标系。空间索引存储了几何对象的 MBR（Minimum Bounding Rectangle）构建，而 MBR 的比较方式也依赖于 `SRID`。
 
-  关于 SRID 相关的介绍，请参见 [空间参考系统（SRS）](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/2.spacial-reference-system-of-mysql-mode.md)。
+  关于 SRID 相关的介绍，请参见 [空间参考系统（SRS）](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/2.spacial-reference-system-of-mysql-mode.md)。
 
-* 只能对空间数据类型的数据列创建空间索引。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
+* 只能对空间数据类型的数据列创建空间索引。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
 
 * 创建空间索引的列的列属性必须为 `NOT NULL`。
 
@@ -154,7 +154,7 @@ CREATE TABLE table_name(column_g_name GEOMETRY NOT NULL SRID 4326,[column_name c
 
 * `SRID 4326`：显示指定空间列的 `SRID`。
 
-* `column_definition`：定义表中各列对应的数据类型。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
+* `column_definition`：定义表中各列对应的数据类型。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
 
 * `INDEX|KEY`：表示在该语句中，索引关键字使用 `INDEX` 或 `KEY` 都可以。
 
@@ -197,7 +197,7 @@ ALTER TABLE table_name ADD SPATIAL INDEX index_name(column_g_name);
 
 * `index_name`：指定待添加的索引的索引名。
 
-* `column_g_name`：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
+* `column_g_name`：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
 
 创建 `tbl2_g` 表后，再创建空间索引 `tbl2_g_idx1` 的示例如下：
 
@@ -244,7 +244,7 @@ ALTER TABLE table_name ADD INDEX|KEY [index_name](column_g_name);
 
 * `index_name`：可选，指定待添加的索引的索引名。如果未指定，默认索引名与指定的列名相同。
 
-* `column_g_name`：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
+* `column_g_name`：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
 
 创建 `tbl3_g` 表后，再创建空间索引 `tbl3_g_idx1` 的示例如下：
 
@@ -462,11 +462,11 @@ ALTER TABLE table_name ADD [UNIQUE | SPATIAL] {INDEX | KEY} [index_name](expr);
 
 更多 MySQL 模式下索引相关的内容，参见以下信息：
 
-* [索引简介](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md)
+* [索引简介](../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md)
 
 * [创建索引](../../../../../3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md)。
 
-* [在分区表上建立索引](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md)
+* [在分区表上建立索引](../3.manage-partitions-of-mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md)
 
 * [查看索引](3.view-indexes-of-mysql-mode.md)
 
