--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/5.manage-indexes-of-mysql-mode/3.view-indexes-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/5.manage-indexes-of-mysql-mode/3.view-indexes-of-mysql-mode.md
@@ -48,10 +48,10 @@ obclient> SHOW INDEX FROM test;
 
 更多 MySQL 模式下索引相关的内容，参见以下信息：
 
-* [索引简介](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md)
+* [索引简介](../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md)
 
 * [创建索引](1.about-indexes-of-mysql-mode.md)
 
-* [在分区表上建立索引](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md)
+* [在分区表上建立索引](../3.manage-partitions-of-mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md)
 
 * [删除索引](4.delete-an-index-of-mysql-mode.md)
