--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md
@@ -74,7 +74,7 @@ OceanBase 数据库的 Oracle 模式支持的约束类型如下：
   Query OK, 0 rows affected
   ```
 
-  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。更多 `foreign_key_checks` 变量的说明，请参见 [foreign_key_checks](../../../../5.system-reference/2.system-variable/3.global-system-variable/27.foreign_key_checks-global.md)。
+  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。更多 `foreign_key_checks` 变量的说明，请参见 [foreign_key_checks](../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/27.foreign_key_checks-global.md)。
   
 * `CHECK` 约束：要求数据库中某列的值符合指定的条件。
 
@@ -273,7 +273,7 @@ obclient> SELECT * FROM USER_CONS_COLUMNS WHERE table_name='TBL3';
   obclient> ALTER TABLE table_name MODIFY c1 NULL;
   ```
 
-更多管理约束的语法及详细介绍请参见 [ALTER TABLE](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md)。
+更多管理约束的语法及详细介绍请参见 [ALTER TABLE](../../../5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md)。
 
 ## 关于时间列的默认时间设置
 
