--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/6.change-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/6.change-table-of-oracle-mode.md
@@ -40,7 +40,7 @@ OceanBase 数据库支持新增列、修改列及其属性、删除列等。
 
 * 修改列类型。OceanBase 数据库支持多种列类型之间的转换。
 
-  OceanBase 数据库中列类型的转换规则及详细信息请参见 [列类型变更规则](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/10.ddl-function-of-oracle-mode/9.column-type-change-rule-of-oracle-mode.md)。
+  OceanBase 数据库中列类型的转换规则及详细信息请参见 [列类型变更规则](../../../5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/10.ddl-function-of-oracle-mode/9.column-type-change-rule-of-oracle-mode.md)。
 
   修改列类型的 SQL 语法如下：
 
