--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/10.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/10.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
@@ -33,7 +33,7 @@ SELECT * FROM SYS.USER_DB_LINKS;
 * `REVERSE_PORT`：反向 DBLink 连接本地端数据库的端口号。如果当前 DBLink 不带有反向 Link 特性，则显示为 `0`。
 * `REVERSE_USERNAME`：反向 DBLink 连接本地端数据库的用户名。如果当前 DBLink 不带有反向 Link 特性，则显示为 `NULL`。
 
-有关 `DBA_DB_LINKS`、`ALL_DB_LINKS`、`USER_DB_LINKS` 等视图中字段的详细说明信息，请参见 [DBA_DB_LINKS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/282.dba_db_links.md)、[ALL_DB_LINKS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/281.all_db_links.md) 和 [USER_DB_LINKS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/283.user_db_links.md)。
+有关 `DBA_DB_LINKS`、`ALL_DB_LINKS`、`USER_DB_LINKS` 等视图中字段的详细说明信息，请参见 [DBA_DB_LINKS](../../../7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/282.dba_db_links.md)、[ALL_DB_LINKS](../../../7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/281.all_db_links.md) 和 [USER_DB_LINKS](../../../7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/283.user_db_links.md)。
 
 ## 相关文档
 
