--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/6.manage-tables-within-a-table-group-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/6.manage-tables-within-a-table-group-of-mysql-mode.md
@@ -120,11 +120,11 @@
 
 根据当前表的实际情况结合修改规则，参考以下内容，进行表分区的修改。
 
-* [修改分区方式](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/3.modify-partition-rules-of-mysql-mode.md)
+* [修改分区方式](../3.manage-partitions-of-mysql-mode/3.modify-partition-rules-of-mysql-mode.md)
 
-* [添加分区](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/4.add-a-partition-of-mysql-mode.md)
+* [添加分区](../3.manage-partitions-of-mysql-mode/4.add-a-partition-of-mysql-mode.md)
 
-* [删除分区](../../../4.replica-management/2.manage-partition-table/2.mysql-mode\4.add-a-partition-of-mysql-mode.md)
+* [删除分区](../3.manage-partitions-of-mysql-mode/5.delete-a-partition-of-mysql-mode.md)
 
 ## 将表移出表组
 
