--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-请确认当前用户拥有 `DROP` 权限。查看当前拥有的权限的操作请参见 [查看用户权限](../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `DROP` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+请确认当前用户拥有 `DROP` 权限。查看当前拥有的权限的操作请参见 [查看用户权限](../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `DROP` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 操作步骤
 
@@ -24,4 +24,4 @@
 
 ## 相关文档
 
-更多 `DROP DATABASE` 语句相关的语法说明请参见 [DROP DATABASE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/34.drop-database-of-mysql-mode.md)。
+更多 `DROP DATABASE` 语句相关的语法说明请参见 [DROP DATABASE](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/34.drop-database-of-mysql-mode.md)。
