--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
@@ -14,7 +14,7 @@
 
   如果仅需要控制 CPU 的资源隔离，则不需要进行磁盘性能校准。
 
-* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/1.create-a-user-of-oracle-mode.md)。
+* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../../5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/1.create-a-user-of-oracle-mode.md)。
 
 ## 背景信息
 
@@ -50,7 +50,7 @@
 
    * `COMMENT` ：填写资源组的备注信息。
 
-   创建成功后，可以查询 `DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/122.dba_rsrc_consumer_groups-of-oracle-mode.md)。
+   创建成功后，可以查询 `DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/122.dba_rsrc_consumer_groups-of-oracle-mode.md)。
 
 3. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN` 子程序，创建资源管理计划。
 
@@ -66,7 +66,7 @@
   
    * `COMMENT` ：填写资源管理计划的备注信息。
 
-   创建成功后，可以查询 `DBA_RSRC_PLANS` 视图进行确认。有关 `DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/124.dba_rsrc_plans-of-oracle-mode.md)。
+   创建成功后，可以查询 `DBA_RSRC_PLANS` 视图进行确认。有关 `DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/124.dba_rsrc_plans-of-oracle-mode.md)。
 
 4. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN_DIRECTIVE` 子程序，创建资源管理计划对应的资源管理计划内容，用于启用资源管理计划时，限制资源组所使用的 CPU 资源和 IOPS 资源。
 
@@ -114,9 +114,9 @@
 
    创建成功，可以查询 `DBA_RSRC_PLAN_DIRECTIVES` 视图和 `DBA_OB_RSRC_IO_DIRECTIVES` 视图进行确认。
 
-   有关 `DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
+   有关 `DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
 
-   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/280.dba_ob_rsrc_io_directives-oracle.md)。
+   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/280.dba_ob_rsrc_io_directives-oracle.md)。
 
 5. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `SET_CONSUMER_GROUP_MAPPING` 子程序，根据实际使用场景，创建用户级资源隔离匹配规则。
 
@@ -181,7 +181,7 @@
 
       * `CONSUMER_GROUP`：指定需要绑定的资源组。表示当 SQL 命中 `VALUE` 中所设置的匹配规则后，需要绑定在哪个资源组上执行该语句。当前仅支持绑定一个资源组。
 
-   创建成功后，可以查询 `DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。有关 `DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [DBA_RSRC_GROUP_MAPPINGS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/123.dba_rsrc_group_mappings-of-oracle-mode.md)。
+   创建成功后，可以查询 `DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。有关 `DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [DBA_RSRC_GROUP_MAPPINGS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/123.dba_rsrc_group_mappings-of-oracle-mode.md)。
 
 6. 为资源组启用合适的资源管理计划。
 
