--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md
@@ -137,7 +137,7 @@ user_name [IDENTIFIED BY [PASSWORD] 'password']
     obclient> GRANT ALL ON db1.tb1_name TO test;
     ```
 
-更多 `GRANT` 语句的信息请参见 [GRANT](../../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/55.grant-of-mysql-mode.md)。
+更多 `GRANT` 语句的信息请参见 [GRANT](../../../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/55.grant-of-mysql-mode.md)。
 
 ## 撤销权限
 
@@ -231,4 +231,4 @@ priv_level:
   obclient> REVOKE SELECT, INSERT ON db1.tb1_name FROM 'test';
   ```
 
-更多 `REVOKE` 语句的信息请参见 [REVOKE](../../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/77.revoke-of-mysql-mode.md)。
+更多 `REVOKE` 语句的信息请参见 [REVOKE](../../../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/77.revoke-of-mysql-mode.md)。
