--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/1.upgrade-overview.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/1.upgrade-overview.md
@@ -62,4 +62,4 @@ OceanBase 数据库升级时，可能会有以下影响：
 
 * [server_permanent_offline_time](../../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/190.server_permanent_offline_time.md)
 * [enable_rebalance](../../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/79.enable_rebalance.md)
-* [enable_rereplication](../../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/82.enable_rereplication.md)
+* [enable_rereplication](../../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/82.enable_rereplication.md)
