--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/6.delete-a-plan-of-oracle-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/6.delete-a-plan-of-oracle-mode.md
@@ -41,8 +41,8 @@
    1 row in set
    ```
 
-   有关 `DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/124.dba_rsrc_plans-of-oracle-mode.md)。
+   有关 `DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/124.dba_rsrc_plans-of-oracle-mode.md)。
 
 ## 相关文档
 
-[DELETE_PLAN](../../../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/6.delete-plan-oracle.md)
+[DELETE_PLAN](../../../../../7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/6.delete-plan-oracle.md)
