--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/7.delete-a-consumer-group-of-oracle-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/7.delete-a-consumer-group-of-oracle-mode.md
@@ -44,8 +44,8 @@
    4 rows in set
    ```
 
-   有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/122.dba_rsrc_consumer_groups-of-oracle-mode.md)。
+   有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/122.dba_rsrc_consumer_groups-of-oracle-mode.md)。
 
 ## 相关文档
 
-[DELETE_CONSUMER_GROUP](../../../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/5.delete-consume-group-oracle.md)
+[DELETE_CONSUMER_GROUP](../../../../../7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/5.delete-consume-group-oracle.md)
