--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/4.update-a-plan-directive-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/4.update-a-plan-directive-of-mysql-mode.md
@@ -58,10 +58,10 @@
    obclient [test]> SELECT * FROM oceanbase.DBA_OB_RSRC_IO_DIRECTIVES;
    ```
 
-   有关 `oceanbase.DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/206.oceanbase-dba_rsrc_plan_directives.md)。
+   有关 `oceanbase.DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/206.oceanbase-dba_rsrc_plan_directives.md)。
 
-   有关 `oceanbase.DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/204.oceanbase.dba_ob_rsrc_io_directives.md)。
+   有关 `oceanbase.DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/204.oceanbase.dba_ob_rsrc_io_directives.md)。
 
 ## 相关文档
 
-[UPDATE_PLAN_DIRECTIVE](../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/9.update-plan-directive-mysql.md)
+[UPDATE_PLAN_DIRECTIVE](../../../../../7.reference/5.sql-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/9.update-plan-directive-mysql.md)
