--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -78,7 +78,7 @@
      1 row in set
      ```
 
-     更多 `mysql.user` 视图的字段及说明请参见 [mysql.user](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/40.mysql-user-of-mysql-mode.md)。
+     更多 `mysql.user` 视图的字段及说明请参见 [mysql.user](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/40.mysql-user-of-mysql-mode.md)。
 
    * 查看用户所拥有的数据库级权限。
 
@@ -112,7 +112,7 @@
      1 row in set
      ```
 
-     更多 `mysql.db` 视图的字段及说明请参见 [mysql.db](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/30.mysql-db-of-mysql-mode.md)。
+     更多 `mysql.db` 视图的字段及说明请参见 [mysql.db](../../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/30.mysql-db-of-mysql-mode.md)。
 
 ## 相关文档
 
