--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/8.delete-a-user-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/8.delete-a-user-of-mysql-mode.md
@@ -35,4 +35,4 @@
 
 ## 相关文档
 
-更多 `DROP USER` 语句的信息请参见 [DROP USER](../../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/40.drop-user-of-mysql-mode.md)。
+更多 `DROP USER` 语句的信息请参见 [DROP USER](../../../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/40.drop-user-of-mysql-mode.md)。
