--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/6.optimizer-dynamic-sampling.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/6.optimizer-dynamic-sampling.md
@@ -167,13 +167,13 @@ SET optimizer_dynamic_sampling = 0;
 `DYNAMIC_SAMPLING` Hint 用于控制查询是否使用动态采样。语法如下：
 
 ```shell
-/*+DYNAMIC_SAMPLING( [[ qb_name ] table_name ] INTNUM1 [, INTNUM2 ] ) */
+/*+DYNAMIC_SAMPLING( [[ qb_name_option ] table_name ] INTNUM1 [, INTNUM2 ] ) */
 ```
 
 `DYNAMIC_SAMPLING` Hint 语法中的字段含义如下：
 
-* `qb_name`：Query Block 的名称（可选）。
-* `table_name`：控制动态采样的表名（可选，为空表示整个查询使用动态采样）。
+* `qb_name_option`：Query Block 的名称（可选）。
+* `table_name`：控制动态采样的表名（可选项，如果为空则表示整个查询使用动态采样）。
 * `INTNUM1`：指定采样的 Level（目前只支持 0 或者 1；1 表示开启动态采样，0 表示关闭动态采样）。
 * `INTNUM2`：指定采样的微块数（建议设置 32 个微块以上）。
 
