--- a/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/2.getxml-oracle.md
+++ b/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/2.getxml-oracle.md
@@ -12,7 +12,7 @@ CREATEXML
 语法 
 -----------------------
 
-OceanBase 数据库当前版本支持从字符串 和 CLOB 创建 XMLType 实例。语法如下：
+OceanBase 数据库当前版本支持从字符串和 CLOB 创建 XMLType 实例。语法如下：
 
 ```sql
 STATIC FUNCTION CREATEXML(
@@ -33,6 +33,35 @@ RETURN XMLType;
 
 |   参数    |                   解释                    |
 |---------|-----------------------------------------|
-| xmlData | `CLOB` 和 `VARCHAR2` 格式或所对应的对象类型格式的实际数据。 |
+| xmlData |  参数数据类型为 `CLOB` 和 `VARCHAR2`。如果输入的数据是合法的 XML `DOCUMENT` 文本，则返回由此文本构成的 XMLType 类型的数据。  |
 
 
+## 示例
+
+如下示例中，变量 `b` 是一个 `VARACHAR2` 类型的变量，其内容是一段合法的 XML 文本。`a` 是 XMLType 类型的变量，第 5 行 `a:=xmltype(b)` 使用 `b` 构造了一个 XMLType 类型的值，并将其赋给变量 `a`。
+
+```sql
+obclient> DECLARE
+        a XMLType;
+        b VARCHAR2(200):='<?xml version="1.0" encoding="ISO-8859-1"?><note><heading>Reminder</heading></note>';
+      BEGIN
+        a:=XMLType.CREATEXML(b);
+      END;
+      /
+Query OK, 0 rows affected
+```
+
+如果输入的数据不是合法的 XML `DOCUMENT` 文本，执行时会报错。
+
+```sql
+obclient> DECLARE
+        a XMLType;
+        b VARCHAR2(200):='<?xml version="1.0" encoding="ISO-8859-1"?><note><heading>Reminder</heading></error>';
+      BEGIN
+        a:=XMLType.CREATEXML(b);
+      END;
+      /
+ORA-31011: XML parsing failed
+at package body oceanbase.XMLTYPE.CREATEXML , line : 1, col : 0
+at anonymous block , line : 5, col : 0
+```
