--- a/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/3.getclobval-oracle.md
+++ b/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/3.getclobval-oracle.md
@@ -18,3 +18,28 @@ RETURN clob;
 ```
 
 
+## 示例
+
+如下示例中，`a1` 和 `a2` 是 XMLType 变量，`c1` 是 `CLOB` 变量，`c2` 是 `VARCHAR2` 变量，`b` 是 `VARCHAR2` 变量，其内容是一段合法的 XML 文本 `<?xml version="1.0" encoding="UTF-8"?><note> <heading>Reminder</heading></note>`。
+
+`a1` 和 `a2` 分别使用 `CREATEXML` 和 `XMLTYPE` 构造函数生成 XMLType 数据。`a1` 和 `a2` 可通过 `GETCLOBVAL()` 或 `GETSTRINGVAL()` 函数转换后赋值给对应类型的变量。
+
+```sql
+obclient> DECLARE
+        a1 XMLType;
+        a2 XMLType;
+        b VARCHAR2(200):='<?xml version="1.0" encoding="ISO-8859-1"?><note><heading>Reminder</heading></note>';
+        c1 CLOB;
+        c2 VARCHAR2(200);
+      BEGIN
+        a1:=XMLType.CREATEXML(b);
+        a2:=XMLType(b);
+        c1:=a1.GETCLOBVAL();
+        c2:=a2.GETSTRINGVAL();
+        DBMS_OUTPUT.PUT_LINE('c1: ' || c1);
+        DBMS_OUTPUT.PUT_LINE('c2: ' || c2);
+      END;
+      /
+Query OK, 0 rows affected 
+```
+
