--- a/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/5.transform-oracle.md
+++ b/zh-CN/7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/5.transform-oracle.md
@@ -1,7 +1,9 @@
 TRANSFORM 
 ==============================
 
-`TRANSFORM` 成员函数使用 XSL 样式表参数和顶级参数（`name=value`）转换 XML 数据。如果除 `parammap` 之外的任一参数为 `NULL`，则返回 `NULL`。
+`TRANSFORM` 成员函数使用 XSL 样式表参数和参数（`name=value`）转换 XML 数据。如果除 `parammap` 之外的任一参数为 `NULL`，则返回 `NULL`。
+
+如果 XSL 样式表输入格式非法，或者转换结果是非法的 XML 文本，OceanBase 数据库会返回 XSL 样式表本身。
 
 
   <main id="notice" >
@@ -30,4 +32,25 @@ RETURN XMLType;
 | xsl      | (IN)     | 描述转换的 XSL 样式表。           |
 | parammap | (IN)     | XSL 的顶级参数，即`name=value`。 |
 
+## 示例
 
+如下示例演示了 XMLType 类型变量 `a` 经过 `TRANSFORM` 转换后的内容，xmltype 变量 xlt 是一个合法 XSL stypesheet。
+
+```sql
+obclient> DECLARE
+     xlt XMLType := xmltype('<?xml version="1.0" encoding="ISO-8859-1"?><xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform"><xsl:template match="/"><document></document></xsl:template></xsl:stylesheet>');
+     a XMLType;
+  BEGIN
+     a:=xmltype('<a>123</a>');
+     DBMS_OUTPUT.PUT_LINE('Before transform: ' ||a.getstringval());
+     a:=a.transform(xlt);
+     DBMS_OUTPUT.PUT_LINE('After transform' ||a.getstringval());
+  END;
+     /
+Query OK, 0 rows affected
+
+Before transform: <a>123</a>
+
+After transform<document/>
+
+```
