--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md
@@ -42,6 +42,7 @@ dml_statement:
 | EXTENDED_NOADDR               | 以简约的方式展示附加信息。   |
 | PARTITIONS                    | 显示分区相关信息。  |
 | FORMAT = {TRADITIONAL\| JSON} | 指定 `EXPALIN` 的输出格式： <ul><li> `TRADITIONAL`：表格输出格式    </li> <li> `JSON`：`KEY:VALUE` 输出格式，JSON 显示为JSON 字符串，包括 `EXTENDED` 和 `PARTITIONS` 信息。</li></ul>    |
+| dml_statement       | DML 语句。       |
 
 ## 示例
 
