--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md
@@ -15,7 +15,7 @@
 /*获取 SQL 计划信息*/
 {EXPLAIN [INTO table_name ] [SET statement_id = string]  
  | DESCRIBE 
- | DESC} [explain_type] dml_statement;
+ | DESC} [explain_type] [PRETTY | PRETTY_COLOR] dml_statement;
 
 explain_type：
     BASIC 
@@ -40,7 +40,9 @@ dml_statement:
  table_name          | 指定表名。  |
 | column_name         | 指定表的列名。|
 | INTO table_name | 表示将 `EXPLAIN` 的计划信息保存到指定表内。如果没有指定 `INTO table_name`，默认查询到 `PLAN_TABLE` 表内。|
-| SET statement_id | 表示当前查询使用字符串标记，以方便后续查询该 SQL 的计划信息。如果没有指定 `SET statement_id`，默认使用空字符串作为信息标记。 || BASIC                         | 指定输出计划的基础信息，如算子 ID、算子名称、所引用的表名。   |
+| SET statement_id | 表示当前查询使用字符串标记，以方便后续查询该 SQL 的计划信息。如果没有指定 `SET statement_id`，默认使用空字符串作为信息标记。 |
+| PRETTY | PRETTY_COLOR | 将计划树中的父节点和子节点使用树线或彩色树线连接起来，使得执行计划展示更方便阅读。|
+| BASIC                         | 指定输出计划的基础信息，如算子 ID、算子名称、所引用的表名。   |
 | explain_type        | 指定解释类型。   |
 | BASIC               | 指定输出计划的基础信息，例如算子 ID、算子名称、所引用的表名。  |
 | OUTLINE             | 指定输出的计划信息包含 Outline 信息。   |
@@ -48,7 +50,7 @@ dml_statement:
 | EXTENDED_NOADDR     | 以简约的方式展示附加信息。   |
 | PARTITIONS          | 显示分区相关信息。    |
 | TRADITIONAL \| JSON | 指定 `EXPALIN` 的输出格式。 <ul><li> `TRADITIONAL`：表格输出格式。   </li><li> `JSON`：使用 `KEY:VALUE` 输出格式，`JSON` 显示为`JSON` 字符串，包括 `EXTENDED` 和 `PARTITIONS` 信息。</li></ul>     |
-| dml_statement       | DML 声明。       |
+| dml_statement       | DML 语句。       |
 
 ## 示例
 
